# showai

./: .env.example  .gitignore  =0.9.4  CosyVoice.Dockerfile  README.md  aethermap.py  ascii-art.txt  docker-compose.yml  example.py  pyproject.toml  requirements.txt  test2.py  test_cosy.py  test_en.py  test_readme.py
my_scripts/: aethermap.py
showai/: __init__.py  cli.py  progress.py
showai/automation/: browser.py
showai/core/: orchestrator.py  timeline.py
showai/media/: audio_utils.py  video_mixer.py
showai/tts/: __init__.py  base.py  cosy_engine.py  f5_engine.py  fish_engine.py
tests/: conftest.py  showcase_audio.py  test_timeline.py
